# fast_api_blog

./: README.md  alembic.ini  pyproject.toml
app/: config.py  main.py
app/api/: dao.py  dependencies.py  models.py  router.py  schemas.py  utils.py
app/auth/: auth.py  dependencies.py  models.py  router.py  schemas.py
app/dao/: base.py  database.py  session_maker.py
app/migration/: env.py
app/migration/versions/: 00c67b7a5799_initial_revision.py  b021700b127a_add_tables_blogs_tags_blog_tags.py
app/pages/: router.py
app/static/js/: post.js
app/static/style/: 404.css  post.css  posts.css
app/templates/: 404.html  post.html  posts.html
