[project]
name = "fast-api-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "bcrypt>=4.2.1",
    "fastapi[all]>=0.115.6",
    "jinja2>=3.1.5",
    "loguru>=0.7.3",
    "markdown2>=2.5.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "python-jose>=3.3.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
]
